Made some tweaks on the styles and javascript

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ode Loic | A remarkable web developer</title>
+    <title>Quake Advertising | Contact</title>
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,700,800|Playfair+Display:400,700|Roboto:300,400,700"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -13,18 +13,18 @@
     <link rel="stylesheet" href="styles/main.min.css">
 </head>
 
-<body>
+<body id="barba-wrapper">
     <div class="logo">
         <a href="index.html">
             <img src="./assets/img/logo.svg" alt="Main Logo for Quakes advertising" class="logo__img">
         </a>
     </div>
-    <main class="main main--bg-color">
+    <main class="main main--bg-color barba-container">
         <div class="menu">
             <nav class="navigation">
                 <a class="navigation__item" href="story.html">Our story</a>
                 <a class="navigation__item" href="services.html">What we do</a>
-                <a class="navigation__item" href="work.html">Our Work</a>
+                <a class="navigation__item" href="#">Our Work</a>
                 <a class="navigation__item" href="contact.html">Contact</a>
             </nav>
             <a href="#" class="menu__icon"><span>MENU</span></a>
@@ -34,24 +34,25 @@
         <section class="contact section p-top--big p-bottom--big">
             <div class="container">
                 <h2 class="heading-section m-bottom--big">
-                    You can Trust us with your brand
+                    Have a project in mind? Let's talk
                 </h2>
 
                 <form action="/" class="form">
                     <div class="form__control">
 
-                        <input type="text" class="form__input" name="cname" onkeyup="this.setAttribute('value', this.value);" placeholder required
-                            value>
+                        <input type="text" class="form__input" name="cname" onkeyup="this.setAttribute('value', this.value);"
+                            placeholder required value>
                         <label for="cname" class="form__label">Company Name</label>
                     </div>
                     <div class="form__control">
-                        <input type="text" class="form__input" name="cname" onkeyup="this.setAttribute('value', this.value);" placeholder required
-                            value>
+                        <input type="text" class="form__input" name="cname" onkeyup="this.setAttribute('value', this.value);"
+                            placeholder required value>
                         <label for="cemail" class="form__label">Company Email</label>
                     </div>
 
                     <div class="form__control">
-                        <textarea class="form__textarea" name="message" onkeyup="this.setAttribute('value', this.value);" value></textarea>
+                        <textarea class="form__textarea" name="message" onkeyup="this.setAttribute('value', this.value);"
+                            value></textarea>
                         <label for="message" class="form__label">Tell us about your company</label>
                     </div>
 
