--- a/services.html
+++ b/services.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ode Loic | A remarkable web developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,700,800|Playfair+Display:400,700|Roboto:300,400,700"
-        rel="stylesheet">
+    <title>Quake Advertising | Services</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.min.css">
 </head>
 
-<body>
+<body id="barba-wrapper">
     <div class="logo">
         <a href="index.html">
             <img src="./assets/img/logo.svg" alt="Main Logo for Quakes advertising" class="logo__img">
@@ -21,14 +20,14 @@
     </div>
 
     <!-- logo -->
-    <main class="main">
+    <main class="main barba-container">
 
 
         <div class="menu">
             <nav class="navigation">
                 <a class="navigation__item" href="story.html">Our story</a>
                 <a class="navigation__item" href="services.html">What we do</a>
-                <a class="navigation__item" href="work.html">Our Work</a>
+                <a class="navigation__item" href="#">Our Work</a>
                 <a class="navigation__item" href="contact.html">Contact</a>
             </nav>
             <a href="#" class="menu__icon"><span>MENU</span></a>
@@ -44,47 +43,62 @@
 
                     <div class="service">
                         <h3>Brand Strategy</h3>
-                        <p>Every project requires us to temperature check the pulse of your business and the market. This
-                            process enables us to make informed decisions regarding your brand/business. An effective story
-                            needs to tap into a truth. This understanding is a key cornerstone to our strategy solutions.</p>
+                        <p>Every project requires us to temperature check the pulse of your business and the market.
+                            This
+                            process enables us to make informed decisions regarding your brand/business. An effective
+                            story
+                            needs to tap into a truth. This understanding is a key cornerstone to our strategy
+                            solutions.</p>
                     </div>
                     <!-- service -->
                     <div class="service">
                         <h3>GO2 Market Strategy</h3>
-                        <p>80% of getting the task right with marketing, is executing right. A good goDtoD market plan sets
-                            the foundation for a great execution. We are equipped to aide you with this process.These solutions
+                        <p>80% of getting the task right with marketing, is executing right. A good goDtoD market plan
+                            sets
+                            the foundation for a great execution. We are equipped to aide you with this process.These
+                            solutions
                             range from the conventional to tailored solutions for any given business.</p>
                     </div>
                     <!-- service -->
                     <div class="service">
                         <h3>eCommerce Solutions</h3>
-                        <p>The supply chain of products services gets challenged each day.With a stronger focus on marketing
-                            and sales. The question every marketer is faced with is “how can you tie revenues to your marketing
-                            activities?” – this is where we come in – to develop solutions that directly impact sales with
+                        <p>The supply chain of products services gets challenged each day.With a stronger focus on
+                            marketing
+                            and sales. The question every marketer is faced with is “how can you tie revenues to your
+                            marketing
+                            activities?” – this is where we come in – to develop solutions that directly impact sales
+                            with
                             eCommerce solutions.
                         </p>
                     </div>
                     <!-- service -->
                     <div class="service">
                         <h3>Public Relations</h3>
-                        <p>Media relations, Reputation management, Crisis aversion and Stakeholder management are some of
-                            the solutions we provide our clients in relation to managing and building a positive image. In
-                            addition to the traditional tactics – we have a strong focus on digital PR which is central now
+                        <p>Media relations, Reputation management, Crisis aversion and Stakeholder management are some
+                            of
+                            the solutions we provide our clients in relation to managing and building a positive image.
+                            In
+                            addition to the traditional tactics – we have a strong focus on digital PR which is central
+                            now
                             more than ever.
                         </p>
                     </div>
                     <!-- service -->
                     <div class="service">
                         <h3>Shopper Marketing tactics</h3>
-                        <p>Influencing purchase decisions has become integral to sustained business growth. We will develop
-                            tactics that will ensure that your product is top of mind at the very moment when consumers decide
+                        <p>Influencing purchase decisions has become integral to sustained business growth. We will
+                            develop
+                            tactics that will ensure that your product is top of mind at the very moment when consumers
+                            decide
                             to spend at the point of purchase.</p>
                     </div>
                     <!-- service -->
                     <div class="service">
                         <h3>Web design & development</h3>
-                        <p>A wholistic web based solution that starts with UI design and UX conceptualization. This is critical
-                            for the ideal web presence which starts with getting aforementioned right. We also provide development
+                        <p>A wholistic web based solution that starts with UI design and UX conceptualization. This is
+                            critical
+                            for the ideal web presence which starts with getting aforementioned right. We also provide
+                            development
                             solutions and back end support for web and app solutions.</p>
                     </div>
                     <!-- service -->
@@ -93,19 +107,15 @@
         </section>
         <section class="section m-bottom--big">
             <div class="story-images">
-                <img src="https://images.unsplash.com/photo-1535043883-2548fb805573?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=636a41a91b04778d90482a26cddb91fb&auto=format&fit=crop&w=800&q=60"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1535033897572-c20b9ef1e68c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3bbd7977842d3d86855809c964d55d2f&auto=format&fit=crop&w=800&q=60"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1534881653320-90428b4da13b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ad04535aaaffaee71d691e9652caf1d0&auto=format&fit=crop&w=800&q=60"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1534953196761-569fa264d8f9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1af729fa43421fd394938483df0ed69f&auto=format&fit=crop&w=800&q=60"
-                    alt="">
+                <img src="./assets/img/team-2.jpg" alt="">
+                <img src="./assets/img/team-3-stand.jpg" alt="">
+                <img src="./assets/img/team-group2-2.jpg" alt="">
+                <img src="./assets/img/team-group2.jpg" alt="">
             </div>
         </section>
         <section class="section p-top--big p-bottom--big">
             <div class="container">
-                <h2 class="heading-section">Clients We worked with</h2>
+                <h2 class="heading-section center">Clients We worked with</h2>
                 <div class="clients m-top--big">
                     <a href="#">
                         <img src="./assets/img/logo-cimerwa.png" alt="">
