--- a/story.html
+++ b/story.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ode Loic | A remarkable web developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,700,800|Playfair+Display:400,700|Roboto:300,400,700"
-        rel="stylesheet">
+    <title>Quake Advertising | Our Story</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.min.css">
 </head>
 
-<body>
-    <main class="main">
+<body id="barba-wrapper">
+    <main class="main barba-container">
         <div class="logo">
             <a href="index.html">
                 <img src="./assets/img/logo.svg" alt="Main Logo for Quakes advertising" class="logo__img">
@@ -28,7 +27,7 @@
             <nav class="navigation">
                 <a class="navigation__item" href="story.html">Our story</a>
                 <a class="navigation__item" href="services.html">What we do</a>
-                <a class="navigation__item" href="work.html">Our Work</a>
+                <a class="navigation__item" href="#">Our Work</a>
                 <a class="navigation__item" href="contact.html">Contact</a>
             </nav>
             <a href="#" class="menu__icon"><span>MENU</span></a>
@@ -40,63 +39,99 @@
                     Our story
                 </h2>
                 <div class="three-column-paragraphs">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. </p>
+                    <p>We are a locally bred agency based in Rwanda with Pan African experiences. Quake was hatched out
+                        of
+                        the belief that African brands needed to be more locally relevant. Tapping into the local
+                        temperature
+                        in order to be one with consumers. </p>
+                    <p>This is what Quake stands for. We believe in locally nuanced work. We believe in work that
+                        reflects
+                        the African optimistic view of life. And finally, we believe in work that adds value to the
+                        bottom-line of all brands we work for.</p>
+                    <p>And finally, we believe in work that adds value to the bottom-line of all brands we work for.
+                        Work that fixes the problem. Welcome to our world, where we shake things up. </p>
                 </div>
             </div>
             <!-- container -->
         </section>
-        <div class="team">
-            <figure class="team__person">
-                <img src="./assets/img/team-1.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-            <figure class="team__person">
-                <img src="./assets/img/team-2.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-            <figure class="team__person">
-                <img src="./assets/img/team-3.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-            <figure class="team__person">
-                <img src="./assets/img/team-4.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-            <figure class="team__person">
-                <img src="./assets/img/team-5.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-            <figure class="team__person">
-                <img src="./assets/img/team-6.jpg" alt="" class="team__avatar">
-                <figcaption>
-                    <h3 class="team__name">Justin Austen</h3>
-                    <span class="team__role">Creative Director</span>
-                </figcaption>
-            </figure>
-        </div>
+        <section>
+            <div class="team">
+                <figure class="team__person">
+                    <img src="./assets/img/maurice_balu_business_and_strategy_head.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Maurice Balu</h3>
+                        <span class="team__role">Business & Strategy Head</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/nicole_ashimwe_account_executive.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Nicole Ashimwe</h3>
+                        <span class="team__role">Account Executive</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/twaha_mubiru_art_director.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Twaha Mubiru</h3>
+                        <span class="team__role">Art Director</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/emelyne_muhawenimana_accountant.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Emelyne Muhawenimana</h3>
+                        <span class="team__role">Accountant</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/henry_kasoma_art_director.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Henry Kasoma</h3>
+                        <span class="team__role">Art Director</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/christine_uwamwiza_social_media_executive.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Christine Uwamwiza</h3>
+                        <span class="team__role">Social Media Executive</span>
+                    </figcaption>
+                </figure>
+                <figure class="team__person">
+                    <img src="./assets/img/agaba_denis_account_manager.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Agaba Denis</h3>
+                        <span class="team__role">Account Manager</span>
+                    </figcaption>
+                </figure>
+                <!-- team member-->
+                <figure class="team__person">
+                    <img src="./assets/img/anita_butera_pr_and_content_executive.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Anita Butera</h3>
+                        <span class="team__role">PR & Content Executive</span>
+                    </figcaption>
+                </figure>
+                <!-- team member -->
+                <figure class="team__person">
+                    <img src="./assets/img/abatoni_camilla_social_media_executive.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Abatoni Camilla</h3>
+                        <span class="team__role">Social Media Executive</span>
+                    </figcaption>
+                </figure>
+                <!-- team member -->
+                <figure class="team__person">
+                    <img src="./assets/img/michea_sengazi_copywriter.jpg" alt="" class="team__avatar">
+                    <figcaption>
+                        <h3 class="team__name">Micheal Sengazi</h3>
+                        <span class="team__role">Copywriter</span>
+                    </figcaption>
+                </figure>
+                <!-- team member -->
+            </div>
+        </section>
 
     </main>
     <script src="scripts/script.js"></script>
