--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ode Loic | A remarkable web developer</title>
-  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,700,800|Playfair+Display:400,700|Roboto:300,400,700"
-    rel="stylesheet">
+  <title>Quake Advertising | Home</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <link rel="stylesheet" href="styles/main.min.css">
 </head>
 
-<body>
+<body id="barba-wrapper">
   <div class="logo">
     <a href="index.html">
       <img src="./assets/img/logo.svg" alt="Main Logo for Quakes advertising" class="logo__img">
@@ -22,12 +21,12 @@
   </div>
 
   <!-- logo -->
-  <main class="main main--bg">
+  <main class="main main--bg barba-container">
     <div class="menu">
       <nav class="navigation" class="animsition">
         <a class="animsition-link navigation__item" href="story.html">Our story</a>
         <a class="animsition-link navigation__item" href="services.html">What we do</a>
-        <a class="animsition-link navigation__item" href="work.html">Our Work</a>
+        <a class="animsition-link navigation__item" href="#">Our Work</a>
         <a class="animsition-link navigation__item" href="contact.html">Contact</a>
       </nav>
       <a href="#" class="menu__icon"><span>MENU</span></a>
@@ -37,7 +36,7 @@
     <div class="container">
       <div class="sliding-texts">
 
-        <h2>Creating locally nuanced work that taps into the local af African vibe.</h2>
+        <h2>Creating locally nuanced work that taps into the local African vibe.</h2>
         <h2>We are the one agency that does not indulge in your BRAND, we indulge in your BUSINESS</h2>
         <h2>All about devising solutions that move the bottom-line</h2>
 
