layout changed and fonts added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Quake Advertising | Home</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400" rel="stylesheet">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <link rel="stylesheet" href="styles/main.min.css">
@@ -21,36 +21,43 @@
   </div>
 
   <!-- logo -->
-  <main class="main main--bg barba-container">
+  <main class="main barba-container">
     <div class="menu">
-      <nav class="navigation" class="animsition">
-        <a class="animsition-link navigation__item" href="story.html">Our story</a>
-        <a class="animsition-link navigation__item" href="services.html">What we do</a>
-        <a class="animsition-link navigation__item" href="#">Our Work</a>
-        <a class="animsition-link navigation__item" href="contact.html">Contact</a>
+      <nav class="navigation">
+        <a class="navigation__item" href="story.html">Our story</a>
+        <a class="navigation__item" href="services.html">What we do</a>
+        <a class="navigation__item" href="#">Our Work</a>
+        <a class="navigation__item" href="contact.html">Contact</a>
       </nav>
       <a href="#" class="menu__icon"><span>MENU</span></a>
     </div>
     <!-- menu -->
 
-    <div class="container">
-      <div class="sliding-texts">
 
-        <h2>Creating locally nuanced work that taps into the local African vibe.</h2>
-        <h2>We are the one agency that does not indulge in your BRAND, we indulge in your BUSINESS</h2>
-        <h2>All about devising solutions that move the bottom-line</h2>
+    <div class="hero">
+      <div class="hero__left">
+        <div class="sliding-texts">
+          <h2>Creating locally nuanced work that taps into the local African vibe.</h2>
+          <h2>We are the one agency that does not indulge in your BRAND, we indulge in your BUSINESS</h2>
+          <h2>All about devising solutions that move the bottom-line</h2>
+          <button class="btn btn--primary btn--cta btn--dark">
+            <span>See our work</span>
+          </button>
 
-
-
+        </div>
       </div>
-      <div class="cta">
-        <button class="btn btn--primary">
-          <span>See our work</span>
-        </button>
+      <!-- hero left -->
+      <div class="hero__right">
+        <div class="sliding-pictures">
+          <img src="./assets/img/team-1.jpg" alt="">
+          <img src="./assets/img/team-2.jpg" alt="">
+          <img src="./assets/img/team-3-stand.jpg" alt="">
+        </div>
+        <!-- sliding pictures -->
       </div>
-
-
     </div>
+
+
 
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
