--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quake Advertising | Contact</title>
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,700,800|Playfair+Display:400,700|Roboto:300,400,700"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.min.css">
@@ -56,7 +54,7 @@
                         <label for="message" class="form__label">Tell us about your company</label>
                     </div>
 
-                    <button class="btn btn--primary">
+                    <button class="btn btn--primary btn--dark">
                         <span>Send Email</span>
                     </button>
 
