finished homepage styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Quake Advertising | Home</title>
-
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
   <link rel="stylesheet" href="styles/main.min.css">
@@ -40,18 +39,41 @@
           <h2>Creating locally nuanced work that taps into the local African vibe.</h2>
           <h2>We are the one agency that does not indulge in your BRAND, we indulge in your BUSINESS</h2>
           <h2>All about devising solutions that move the bottom-line</h2>
-          <button class="btn btn--primary btn--cta btn--dark">
-            <span>See our work</span>
-          </button>
-
         </div>
+        <!-- sliding texts -->
+
+        <a href="#" class="cta-link">See our work &rarr;</a>
+        <!-- button -->
+
+        <div class="footnote">
+          <p>Quake Advertising &copy; 2018. All Rights reserverd</p>
+          <div class="social-icons">
+            <a href="#">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <!--icon -->
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <!--icon -->
+            <a href="#">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <!--icon -->
+          </div>
+        </div>
+        <!-- footnote -->
+
+
       </div>
       <!-- hero left -->
       <div class="hero__right">
         <div class="sliding-pictures">
-          <img src="./assets/img/team-1.jpg" alt="">
-          <img src="./assets/img/team-2.jpg" alt="">
-          <img src="./assets/img/team-3-stand.jpg" alt="">
+          <img src="./assets/img/selected-1.jpg" alt="">
+          <img src="./assets/img/selected-5.jpg" alt="">
+          <img src="./assets/img/selected-2.jpg" alt="">
+          <img src="./assets/img/selected-4.jpg" alt="">
+          <img src="./assets/img/selected-6.jpg" alt="">
         </div>
         <!-- sliding pictures -->
       </div>
