--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quake Advertising | Services</title>
-    
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.min.css">
@@ -107,10 +107,10 @@
         </section>
         <section class="section m-bottom--big">
             <div class="story-images">
-                <img src="./assets/img/team-2.jpg" alt="">
-                <img src="./assets/img/team-3-stand.jpg" alt="">
-                <img src="./assets/img/team-group2-2.jpg" alt="">
-                <img src="./assets/img/team-group2.jpg" alt="">
+                <img src="./assets/img/selected-2.jpg" alt="">
+                <img src="./assets/img/selected-1.jpg" alt="">
+                <img src="./assets/img/selected-5.jpg" alt="">
+                <img src="./assets/img/selected-6.jpg" alt="">
             </div>
         </section>
         <section class="section p-top--big p-bottom--big">
