--- a/story.html
+++ b/story.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quake Advertising | Our Story</title>
-    
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxygen:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.min.css">
@@ -64,9 +64,9 @@
                     </figcaption>
                 </figure>
                 <figure class="team__person">
-                    <img src="./assets/img/nicole_ashimwe_account_executive.jpg" alt="" class="team__avatar">
+                    <img src="./assets/img/nicole_ishimwe_account_executive.jpg" alt="" class="team__avatar">
                     <figcaption>
-                        <h3 class="team__name">Nicole Ashimwe</h3>
+                        <h3 class="team__name">Nicole Ishimwe</h3>
                         <span class="team__role">Account Executive</span>
                     </figcaption>
                 </figure>
